# grammarscope

./: .gitignore  apk-list.sh  apk-version.sh  build.gradle.kts  check_alignment.sh  colors.sh  dummy.jks  find-aabs.sh  googleplay_list.py  googleplay_list.sh  googleplay_list_all.sh  googleplay_move.py  googleplay_move.sh  googleplay_move_all.sh  googleplay_upload_aab_all.sh  googleplay_upload_aab_grammarscope_corenlp.sh  googleplay_upload_aab_grammarscope_corenlp_base.sh  googleplay_upload_aab_grammarscope_corenlp_premium.sh  googleplay_upload_aab_grammarscope_syntaxnet.sh  googleplay_upload_aab_grammarscope_syntaxnet_base.sh  googleplay_upload_aab_grammarscope_syntaxnet_premium.sh  googleplay_upload_aab_grammarscope_udpipe.sh  googleplay_upload_aab_grammarscope_udpipe_base.sh  googleplay_upload_aab_grammarscope_udpipe_premium.sh  googleplay_upload_aab_mysyntaxnet.sh  googleplay_upload_apk.sh  googleplay_upload_apk_all.sh  googleplay_upload_apk_grammarscope_syntaxnet.sh  googleplay_upload_apk_grammarscope_udpipe.sh  googleplay_upload_apk_mysyntaxnet.sh  googleplay_upload_deobf.py  googleplay_upload_deobf.sh  googleplay_upload_deobf_all.sh  googleplay_upload_deobf_grammarscope_syntaxnet.sh  googleplay_upload_deobf_grammarscope_udpipe.sh  googleplay_upload_deobf_mysyntaxnet.sh  gradle.properties  install_all.sh  install_all_premium.sh  install_grammarscope_syntaxnet.sh  (+17 more)
annotations/: build.gradle.kts
app_grammarscope_corenlp/: .gitignore  build.gradle.kts  google-services.json  proguard-rules.pro
app_grammarscope_syntaxnet/: build.gradle.kts  google-services.json  proguard-rules.pro
app_grammarscope_udpipe/: build.gradle.kts  google-services.json  proguard-rules.pro
app_mysyntaxnet/: build.gradle.kts  proguard-rules.pro
build_theme/: build-theme.sh  build-themes-html.sh  build-themes.sh  contrasts-themes.sh  corenlp-day.gpa  corenlp-day.txt  corenlp-night.gpa  corenlp-night.txt  define_data.sh  html-themes.sh  udpipe-day.gpa  udpipe-day.txt  udpipe-night.gpa  udpipe-night.txt
capture/: build.gradle.kts
common/: build.gradle.kts
core/: build.gradle.kts
corenlp/: build.gradle.kts  proguard-rules.pro
corenlp_bound_server/: build.gradle.kts  proguard-rules.pro
corenlp_engine/: build.gradle.kts  proguard-rules.pro
coroutines/: build.gradle.kts
data/: build.gradle.kts  proguard-rules.pro
deploy/: build.gradle.kts
depparse_bound_client/: build.gradle.kts  proguard-rules.pro
depparse_messenger_client/: build.gradle
donate/: build.gradle.kts
download/: build.gradle.kts
download_common/: build.gradle.kts
gradle/: libs.versions.toml
grammarscope/: build.gradle.kts  proguard-rules.pro
graph/: build.gradle.kts  proguard-rules.pro
livedata/: build.gradle.kts
others/: build.gradle.kts  proguard-rules.pro
syntaxnet1_jni/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
syntaxnet1_jni/src/main/cpp/: syntaxnet_jni.cpp
syntaxnet1_jni/src/main/include/syntaxnet1/: iface.h  iface2.h
syntaxnet1_jni/src/main/java/org/syntaxnet1/: JNI1.kt  Syntaxnet1Engine.kt
syntaxnet1_jni/src/main/jniLibs/: cp-so.sh  ln-so.sh
(+659 files in other folders)
